# mlbf

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  interpreter.c  interpreter.h  meson.build  mlbf.c  test.py
examples/: README.md
src/: compiler.c  compiler.h  errors.h  instruction.h  interpreter.c  interpreter.h  mlbf.c  patterns.h  program.c  program.h  transpiler.c  transpiler.h  utils.h
tests/: bitwidth.b.out
